--- a/css/main.css
+++ b/css/main.css
@@ -101,49 +101,32 @@ textarea {
 html {
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
-}  
+}
+
+.content-wrapper {
+  padding: 0 20px;
+  width: 95%;
+}
 
 h2 {
   font-size: 20px;
 }
 
-.content-wrapper {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 header {
   border-bottom: 1px solid black;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
 }
 
-.profile,
-.promo,
-.page-list {
-  width: 30%;
+.profile img {
+  display: none;
 }
 
-.content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 20px;
+.promo img {
+  padding-left: 25px;
+  margin-bottom: 20px;
 }
 
-.profile {
-  display: flex;
-  justify-content: center;
-}
 
-.profile-image {
-  width: 250px;
-  padding-bottom: 130px;
-}
-
-.portfolio-site-image {
-  width: 350px;
-  padding-bottom: 135px;
-}
 
 
 /* ==========================================================================
@@ -235,8 +218,59 @@ header {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+
+  .content-wrapper {
+    width: 85%;
+  }
+
+  .profile {
+    display: flex;
+  }
+  .profile img {
+    
+  }
+  
+  .promo img {
+    padding: 0 200px;
+    margin-bottom: 20px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .content-wrapper {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .profile,
+.promo,
+.page-list {
+  width: 30%;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.profile {
+  display: flex;
+  justify-content: center;
+}
+
+.profile-image {
+  width: 250px;
+  padding-bottom: 130px;
+}
+
+.portfolio-site-image {
+  width: 350px;
+  padding-bottom: 135px;
+}
+
 }
 
 @media print,
